[build-system]
requires = ["setuptools >= 77.0.3", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-network"
dynamic = ["version"]
description = "A Python package for biological network analysis"
authors = [
    { name = "Ira Horecka", email = "ira89@icloud.com" },
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "ipywidgets",
    "leidenalg",
    "markov_clustering",
    "matplotlib",
    "networkx",
    "nltk",
    "numpy",
    "openpyxl",
    "pandas",
    "python-igraph",
    "python-louvain",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "threadpoolctl",
    "tqdm",
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["risk"]

[tool.setuptools.dynamic]
version = { attr = "risk.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
