[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-network"
dynamic = ["version"]
description = "A Python package for biological network analysis"
authors = [
    { name = "Ira Horecka", email = "ira89@icloud.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "ipywidgets",
    "leidenalg",
    "markov_clustering",
    "matplotlib",
    "networkx",
    "nltk",
    "numpy",
    "openpyxl",
    "pandas",
    "python-igraph",
    "python-louvain",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "threadpoolctl",
    "tqdm",
]

[project.license]
text = "GPL-3.0-or-later"

[project.urls]
"Homepage" = "https://github.com/riskportal/network"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "risk.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
