[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-network"
dynamic = ["version"]
description = "A Python package for scalable network analysis and high-quality visualization."
authors = [
    { name = "Ira Horecka", email = "ira89@icloud.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ipywidgets",
    "leidenalg",
    "markov_clustering",
    "matplotlib",
    "networkx",
    "nltk",
    "numpy",
    "openpyxl",
    "pandas",
    "python-igraph",
    "python-louvain",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "threadpoolctl",
    "tqdm",
]

[project.license]
text = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/riskportal/network"
Issues = "https://github.com/riskportal/network/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "risk.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
